syntax = "proto3";

package saas.v1alpha1;

option go_package = "github.com/cisco-eti/phoenix-saas-be/api/saas/v1alpha1";

import "google/api/annotations.proto";
import "saas/v1alpha1/agent.proto";
import "saas/v1alpha1/agent_id.proto";

message GetAgentRequest {
  AgentIdentifier id = 1;
}

message GetAgentResponse {
  Agent agent = 1;
}

message DeleteAgentRequest {
  AgentIdentifier id = 1;
}

message DeleteAgentResponse {}

// This API is manily for the UI and the implementation of these APIs shouldn't communicate with the Agent Directory
service AgentHubService {
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/agents/ref/{id.digest}"
      // additional_bindings: {get: "/v1alpha1/agents/{id.repo_version_id.repository_name}/{id.repo_version_id.version}"}
    };
  }

  rpc DeleteAgent(DeleteAgentRequest) returns (DeleteAgentResponse) {
    option (google.api.http) = {
      delete: "/v1alpha1/agents/ref/{id.digest}"
      // additional_bindings: {delete: "/v1alpha1/agents/{id.repo_version_id.repository_name}/{id.repo_version_id.version}"}
    };
  }
}
